2002-10-01  Erez Zadok  <ezk@cs.sunysb.edu>

	* include/am_defs.h: define "extern int sys_err" if needed.

	* aux/macros/header_templates.m4: template for
	HAVE_EXTERN_SYS_NERR.

	* hlfsd/hlfsd.h, libamu/xutil.c (expand_error), amq/amq.c
	(show_mi): remove "extern int sys_err"

	* configure.in: execute test for "extern int sys_err"

	* Makefile.am (EXTRA_DIST_AUX): distribute new extern_sys_err.m4 file.

	* aux/macros/extern_sys_nerr.m4: new test to check for existence
	of "extern int sys_nerr" definition in system headers.

2002-09-17  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* libamu/xutil.c (dbg_opt): bring comments in line with the code

	* hlfsd/hlfsd.c (main): use amuDebug() instead of touching
	debug_flags directly

	* amd/amd.c (main): don't init debug_flags, leave it as zero (no
	debugging by default)

2002-09-11  Ion Badulescu  <ion@guppy.limebrokerage.com>

	Debug code sanitization:

	- amuDebug() becomes an expression, and explicit if() statements
	are added around it throughout the code
	- amuDebugNo() goes away (ugh!)
	- D_AMQ, D_DAEMON and D_FORK reverse their meaning
	- D_ALL contains only options that don't affect amd's functionality

2002-09-04  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* amd/amfs_auto.c (free_continuation): avoid double-free'ing the
	mntfs if there was an error/timeout

2002-09-04  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* amd/amfs_auto.c (amfs_auto_lookup_mntfs): use ereturn() instead
	of "return NULL" to signal an error to the upper layers
	(amfs_auto_mount): use strdup so the string can be free'd later on
	[Debian bug report from Matt Chapman <matthewc@cse.unsw.edu.au>]

2002-09-03  Ion Badulescu  <ion@guppy.limebrokerage.com>

	Patches from George Ross <gdmr@dcs.ed.ac.uk>:

	* amd/amfs_auto.c (assign_error_mntfs): do not discard old mntfs,
	it will be done in free_continuation(); assorted debugging messages

	* amd/srvr_nfs.c (nfs_timed_out): allocate a new XID on server