@@ -53,7 +53,7 @@ AH_BOTTOM([
 dnl
 dnl AC_CONFIG_AUX_DIR(aux)
 AC_PREREQ(2.52)
-AC_REVISION($Revision: 1.39 $)
+AC_REVISION($Revision: 1.40 $)
 AC_COPYRIGHT([Copyright (c) 1997-2002 Erez Zadok])
 dnl find out system type
 AC_MSG_NOTICE(*** SYSTEM TYPES ***)
@@ -640,7 +640,6 @@ dnl ######################################################################
 AC_MSG_NOTICE(*** EXTERNAL DEFINITIONS ***)
 AMU_EXTERN_SYS_ERRLIST
 AMU_EXTERN_OPTARG
-AMU_EXTERN_SYS_NERR
 AMU_CHECK_EXTERNS(
 	clnt_spcreateerror	\
 	clnt_sperrno		\
